--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -89,6 +89,16 @@
   }
 }
 
+.card__link-image {
+  &:hover + .card__container {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  &:active + .card__container {
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  }
+}
+
 .card__link-image img {
   display: block;
 }
