--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -26,29 +26,12 @@
 .video__wrapper-inner {
   position: relative;
   padding-bottom: 30px;
+
   box-shadow:
     inset 0 1px 0 @special-grey-lighter,
     inset 0 -1px 0 @special-grey-lighter,
     inset -1px 0 0 @special-grey-lighter,
     inset 1px 0 0 @special-grey-lighter;
-
-  &:hover {
-    box-shadow:
-      0 6px 10px rgba(0, 0, 0, 0.1),
-      inset 0 1px 0 @special-grey-lighter,
-      inset 0 -1px 0 @special-grey-lighter,
-      inset -1px 0 0 @special-grey-lighter,
-      inset 1px 0 0 @special-grey-lighter;
-  }
-
-  &:active {
-    box-shadow:
-      0 3px 5px rgba(0, 0, 0, 0.1),
-      inset 0 1px 0 @special-grey-lighter,
-      inset 0 -1px 0 @special-grey-lighter,
-      inset -1px 0 0 @special-grey-lighter,
-      inset 1px 0 0 @special-grey-lighter;
-  }
 
   @media (min-width: @tablet-width) {
     display: flex;
@@ -61,6 +44,34 @@
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: min-content 1fr min-content;
     padding-bottom: 0;
+
+    &:hover::after {
+      box-shadow:
+        0 6px 10px rgba(0, 0, 0, 0.1),
+        inset 0 1px 0 @special-grey-lighter,
+        inset 0 -1px 0 @special-grey-lighter,
+        inset -1px 0 0 @special-grey-lighter,
+        inset 1px 0 0 @special-grey-lighter;
+    }
+
+    &:active::after {
+      box-shadow:
+        0 3px 5px rgba(0, 0, 0, 0.1),
+        inset 0 1px 0 @special-grey-lighter,
+        inset 0 -1px 0 @special-grey-lighter,
+        inset -1px 0 0 @special-grey-lighter,
+        inset 1px 0 0 @special-grey-lighter;
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 368px;
+      top: 0;
+      bottom: 0;
+      right: 0;
+    }
   }
 }
 
@@ -200,6 +211,10 @@
   position: absolute;
   top: calc(50% - 38px);
   left: calc(50% - 50px);
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 
   &:hover {
     transform: scale(1.2);
