--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -47,7 +47,7 @@
   align-self: flex-end;
   position: absolute;
   top: -67px;
-  right: -2px;
+  right: 0;
   z-index: 2;
   display: block;
   width: 70px;
@@ -65,7 +65,7 @@
   content: "";
   position: absolute;
   top: 19px;
-  left: 17px;
+  left: 19px;
   width: 20px;
   height: 2px;
   background-color: @special-black;
@@ -81,7 +81,7 @@
     content: "";
     position: absolute;
     top: 24px;
-    left: 18px;
+    left: 17px;
     width: 27px;
     height: 2px;
     background-color: @basic-black;
