--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -165,16 +165,15 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 
   &::after {
     content: "";
     display: block;
     height: 1px;
-    width: 200px;
+    width: 100%;
     color: @special-green-underline;
     background-color: @special-green-underline;
-    margin-left: auto;
+    margin-left: 25px;
   }
 
   @media (min-width: @tablet-width) {
