--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -29,11 +29,10 @@
       display: block;
       width: 100%;
       height: 24px;
-      max-height: 34px;
-      padding-top: 3%;
       background-image: url("../img/zigzag-fill-tablet.svg");
       background-repeat: repeat-x;
-      background-position: 50% 100%;
+      background-position: bottom;
+      background-size: contain;
     }
   }
 
@@ -43,16 +42,16 @@
     &::after {
       content: "";
       position: absolute;
-      bottom: -15px;
+      margin: 0;
+      padding: 0;
+      bottom: -16px;
       left: 0;
       display: block;
       width: 100%;
-      height: 24px;
-      max-height: 34px;
-      padding-top: 3%;
+      height: 34px;
       background-image: url("../img/zigzag-fill-desktop.svg");
-      background-repeat: repeat-x;
-      background-position: 50% 100%;
+      background-position: bottom;
+      background-size: contain;
     }
   }
 }
